Updating tmux conf to 2.1 version

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,8 +1,5 @@
 # Sets para o Mouse
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+set -g mode on
 
 # Customizacao barra de status
 set -g status-utf8 on
