--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,8 +1,12 @@
+# Tmux conf for  2.1 verion
+
 # Sets para o Mouse
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+set -g mouse-utf8 on
+set -g mouse on
+
+# Scroll
+bind -n WheelUpPane   select-pane -t= \; copy-mode -e \; send-keys -M
+bind -n WheelDownPane select-pane -t= \;                 send-keys -M
 
 # Customizacao barra de status
 set -g status-utf8 on
