Adding mouse scroll support to tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,5 +1,8 @@
 # Sets para o Mouse
-set -g mode on
+set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
 
 # Customizacao barra de status
 set -g status-utf8 on
